test/modules/shadowing/var-shadows-public-import.good
var-shadows-public-import.chpl:6: In module 'N':
var-shadows-public-import.chpl:8: error: 'x' has multiple definitions
var-shadows-public-import.chpl:7: note: redefined through the 'import' statement here
var-shadows-public-import.chpl:3: note: leading to the definition here
